Remove redundant parentheses
- Use valueOf()
- Use diamonds
- Use final
- Use compact array declaration
- Use for-each